MyProject/force-app/main/default/objects/Energy_Readout__c/Energy_Readout__c.object-meta.xml
<CustomObject>
    <label>Energy Readout</label>
    <nameField>
        <displayFormat>PWR-{00000}</displayFormat>
        <label>Energy Readout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Readouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>