MyProject/force-app/main/default/objects/Energy_Readout__c/fields/Efficiency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Rate__c</fullName>
    <formula>IF(Expected_Output_KWH__c &gt; 0, Power_Generated_KWH__c / Expected_Output_KWH__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>