MyProject/force-app/main/default/objects/Energy_Readout__c/fields/Expected_Output_KWH__c.field-meta.xml
<CustomField>
    <fullName>Expected_Output_KWH__c</fullName>
    <label>Expected Output KWH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>