MyProject/force-app/main/default/objects/Energy_Readout__c/fields/Parent_Installation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Installation__c</fullName>
    <label>Parent Installation</label>
    <referenceTo>Solar_Installation__c</referenceTo>
    <relationshipLabel>Energy Readouts</relationshipLabel>
    <relationshipName>Energy_Readouts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>