MyProject/force-app/main/default/objects/Energy_Readout__c/fields/Power_Generated_KWH__c.field-meta.xml
<CustomField>
    <fullName>Power_Generated_KWH__c</fullName>
    <label>Power Generated KWH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>