MyProject/force-app/main/default/objects/Energy_Readout__c/fields/Readout_Date__c.field-meta.xml
<CustomField>
    <fullName>Readout_Date__c</fullName>
    <label>Readout Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>